# graph_rag

./: .gitignore  Cargo.toml  cytoscape.sh  display.sh  run.sh
cytoscape/: index.html
docs/: design_sketch.md  graph_extraction.md  microsoft_graph_rag.txt
prompts/: entity_extraction_schema.json  entity_identification_sys.txt  entity_identification_user.txt  entity_relationship_schema.json  raw-prompts.txt  relationship_identification_sys.txt  relationship_identification_user.txt
src/: lib.rs  main.rs
src/adapters/outbound/: mod.rs  ollama_entity_extractor.rs  ollama_relationship_extractor.rs
src/domain/: config.rs  entities.rs  invariants.rs  mod.rs  relationships.rs  util.rs  value_objects.rs
src/ports/: mod.rs
src/ports/outbound/: ai_port.rs  mod.rs
src/service/: graph_extractor.rs  mod.rs
