[package]
name = "graph_rag"
version = "0.1.0"
edition = "2024"

[dependencies]
graphqlite = "0.4.0"
llm_generate = { git = "https://github.com/guylemon/instrumentum", package = "llm_generate", branch = "master" }
llm_provider = { git = "https://github.com/guylemon/instrumentum", package = "llm_provider", branch = "master" }
llm_msg = { git = "https://github.com/guylemon/instrumentum", package = "llm_msg", branch = "master" }
llm_prompt = { git = "https://github.com/guylemon/instrumentum", package = "llm_prompt", branch = "master" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# env_logger = "0.11.9"
# log = "0.4.29"
# csv = "1.4.0"
# clap = { version = "4.5", features = ["derive", "env"] }
# toml = "0.8"
